refactoring with idea